RESOLVED FIXED306337
[threaded-animations] test `webanimations/accelerated-animations-and-motion-path.html` crashes with "Threaded Time-based Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=306337
Summary [threaded-animations] test `webanimations/accelerated-animations-and-motion-p...
Antoine Quint
Reported 2026-01-27 08:11:03 PST
The test `webanimations/accelerated-animations-and-motion-path.html` crashes with "Threaded Time-based Animations" enabled due to hitting the `ASSERT(canBlend(from, to))` in the `blend(const AcceleratedEffectOffsetPosition&, const AcceleratedEffectOffsetPosition&, const BlendingContext&)` function.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-27 08:11:18 PST
Antoine Quint
Comment 2 2026-01-27 08:15:29 PST
EWS
Comment 3 2026-01-27 10:39:27 PST
Committed 306290@main (44c3b8715193): <https://commits.webkit.org/306290@main> Reviewed commits have been landed. Closing PR #57334 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.