Cherry-pick 44c3b8715193. rdar://169019719

[threaded-animations] test `webanimations/accelerated-animations-and-motion-path.html` crashes with "Threaded Time-based Animations" enabled
    https://bugs.webkit.org/show_bug.cgi?id=306337
    rdar://169007663

    Reviewed by Anne van Kesteren.

    Use the same approach used for `offset-rotate` to blend `offset-anchor` and `offset-position`
    to set the blending context as discrete if `canBlend()` returns false for the keyframe values
    so as not to fail the assertion in the `blend()` method for the supporting object type.

    Note that there is no test change in this patch since the flag is not yet enabled on bots. This
    was caught in preparation of that running animation tests locally using
    `--experimental-feature ThreadedTimeBasedAnimationsEnabled=true`.

    Canonical link: https://commits.webkit.org/306290@main

Identifier: 305413.184@safari-7624-branch